# lexilensai-sdk

./: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  GAPS_RESOLVED.md  LICENSE  NEXT_STEPS.md  PUSH_INSTRUCTIONS.md  QUICKREF.md  README.md  VERIFICATION_REPORT.md  pyproject.toml
.github/workflows/: test-sdk.yml
examples/: anthropic_demo.py  jsonl_export.py  mcp_server_demo.py  production_demo.ipynb  quickstart.py  quickstart_console.py
src/lexilensai/: __init__.py  __main__.py  config.py  lexilens.py  report.py  span.py
src/lexilensai/exporters/: __init__.py  console.py  jsonl.py  kinesis.py  otel.py  platform.py
src/lexilensai/frameworks/: __init__.py  anthropic.py  strands.py
tests/: conftest.py  test_config.py  test_report.py  test_span.py  test_span_normalizer_roundtrip.py
tests/integration/: README.md  __init__.py  test_e2e_workflow.py  test_platform_ingest.py
tests/test_exporters/: __init__.py  test_jsonl_exporter.py  test_kinesis_exporter.py  test_otel_exporter.py
tests/test_frameworks/: __init__.py  test_anthropic.py
